Fix SonarLint major and most of the minor non-compliant code.
(cherry picked from commit 91fe96072d3925c0e8fe3db1203b63ddb6aad329)